--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,5 +23,12 @@ jobs:
       run: |
         npm ci
         npm run build --if-present
+        git config --local user.email "ess_president@me.com"
+        git config --local user.name "steelydylan"
+        git commit -m "chore(update) periodical update" -a
       env:
         CI: true
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
