--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,8 @@ jobs:
       run: |
         npm ci
         npm run build --if-present
+        cp ./dist/index.css ./index.css
+        cp ./dist/index.html ./index.html
         git config --local user.email "ess_president@me.com"
         git config --local user.name "steelydylan"
         git commit -m "chore(update) periodical update" -a
